<resources>
    <string name="app_name">FinTrack-BangkitCapstone2024</string>

    <!--    Auth and upload csv-->
    <string name="hi_welcome_back">Hi, Welcome Back! 👋</string>
    <string name="image">image</string>
    <string name="email">Email Address</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="confirm_your_password">Confirm Your Password</string>
    <string name="if_you_have_account">if you have account? </string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_your_business_name">Enter Your Business Name</string>
    <string name="upload">Upload</string>
    <string name="import_your_finance_report">Import Your Finance Report</string>
    <string name="import_your_finance_report_if_you_have">Import your finance report if you have, to input</string>
    <string name="logo_csv">logo_csv</string>
    <string name="drag_your_file_s_to_start_uploading">Drag your file(s) to start uploading</string>
    <string name="or">OR</string>
    <string name="choose_file">Choose File</string>
    <string name="login">Login</string>
    <string name="name">Name</string>

    <!--    CustomView-->
    <string name="formatEmalW">Incorrect Email Format</string>
    <string name="email_already">The email you entered is already registered, please change your email</string>
    <string name="emtyName">Name cannot be empty</string>
    <string name="PassMust8C">Password must be at least 8 characters</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>

    <!--    Modal-->
    <string name="is_your_business_new">IS YOUR BUSINESS NEW?</string>
    <string name="has_your_business_been_running_for_some_time_and_has_financial_records">Has your business been running for some time and has financial records?</string>
    <string name="yes">Yes</string>
    <string name="i_don_t_have_financial_recording_data">I don\'t have financial recording data</string>
    <string name="no">No</string>
    <string name="good_morning">Good Morning!</string>
    <string name="plut_kupie">Plut Kupie</string>
    <string name="balance">Balance</string>
    <string name="count_money">Rp 0,00-</string>
    <string name="pengeluaran">Pengeluaran</string>
    <string name="money">Rp 0</string>
    <string name="pemasukkan">Pemasukkan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="tab_text_1">Pemasukkkan</string>
    <string name="tab_text_2">Pengeluaran\n</string>
    <string name="emptyEmail">Email cannot be empty</string>
    <string name="emtyPassword">Password cannot be empty</string>
    <string name="emtyPasswordConfirm">Confirm password cannot be empty</string>
    <string name="makeSureData">Make sure data you fill All the data corrently</string>
    <string name="data_correctly">Enter your account data correctly!</string>
    <string name="logout">Logout</string>
    <string name="confirm_logout">Are you sure you want to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="logout_with_space">Log out</string>
    <string name="logout_success">Logged out successfully</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="or_sign_in_with">Or Sign In with</string>
    <string name="track_your_finance_easily_with_fintrack">Track your finance easily with Fintrack</string>
    <string name="welcome_to_fintrack">Welcome to Fintrack</string>
    <string name="url_xlsx"><![CDATA[https://docs.google.com/spreadsheets/d/1Y_L8V-kKgC62sc51l_u9N6Lo-oFDdPPL/edit?usp=sharing&ouid=102100023147370874009&rtpof=true&sd=true]]></string>


</resources>