<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".ui.Activity.ImportActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="20dp"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/inter_semibold"
        android:letterSpacing="0.02"
        android:text="@string/import_your_finance_report"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:textColor="#78828A"
        android:text="@string/import_your_finance_report_if_you_have"
        android:textSize="14sp" />


    <ImageView
        android:layout_width="match_parent"
        android:layout_marginTop="25dp"
        android:layout_height="300dp"
        android:src="@drawable/ilustrator_import"
        android:layout_marginBottom="25dp"
        android:layout_gravity="center"
        android:contentDescription="@string/image" />

    <!--    card-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:background="@drawable/border_csv"
        android:orientation="vertical">

        <ImageView
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:src="@drawable/logo_csv"
            android:contentDescription="@string/logo_csv" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:letterSpacing="0"
            android:text="@string/drag_your_file_s_to_start_uploading"
            android:layout_gravity="center"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_gravity="center"

                android:orientation="horizontal">
                <View
                    android:layout_gravity="center"
                    android:layout_width="62dp"
                    android:layout_height="1dp"
                    android:background="#9CA4AB"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#9CA4AB"
                    android:text="@string/or"
                    android:layout_marginHorizontal="8dp"/>

                <View
                    android:layout_gravity="center"
                    android:layout_width="62dp"
                    android:layout_height="1dp"
                    android:background="#9CA4AB"/>
            </LinearLayout>

            <Button
            android:id="@+id/choose_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?attr/materialButtonOutlinedStyle"
            android:backgroundTint="@color/white"
            android:text="@string/choose_file"
            app:cornerRadius="8dp"
            android:textSize="12sp"
            android:layout_marginTop="4dp"
            app:strokeColor="#1849D6"
            android:letterSpacing="0"
            android:textColor="@color/black"
            android:fontFamily="@font/inter_semibold"
            android:layout_gravity="center"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/inter"
        android:background="@drawable/border_buttom"
        app:backgroundTint="@color/black"
        android:text="@string/upload"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/inter"
        android:background="@drawable/border_buttom"
        app:backgroundTint="@color/black"
        android:text="skip"/>


</LinearLayout>