<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/is_your_business_new"
            android:fontFamily="@font/inter_semibold"
            android:textSize="24sp"
            android:textAlignment="center"
            android:letterSpacing="0.06"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/has_your_business_been_running_for_some_time_and_has_financial_records"
            android:fontFamily="@font/inter"
            android:letterSpacing="0"
            android:textColor="#78828A"
            android:gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="42dp"
            android:layout_marginBottom="32dp"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:background="@drawable/border_buttom"
                    android:fontFamily="@font/inter"
                    android:text="@string/yes"
                    app:backgroundTint="@color/black" />

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:letterSpacing="0"
                    android:text="@string/i_don_t_have_financial_recording_data"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:background="@drawable/border_buttom"
                    android:fontFamily="@font/inter"
                    android:text="@string/no"
                    android:textColor="@color/black"
                    app:backgroundTint="#E1E1E1" />

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:letterSpacing="0"
                    android:text="I have financial recording data"
                    android:textAlignment="center" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>